k8s/netbox-old/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netbox
spec:
  selector:
    app: netbox
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
