k8s/netbox-old/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: netbox
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`netbox.anshulg.com`)
      middlewares:
        - name: security-headers
          namespace: kube-system
      services:
        - name: netbox
          port: 80
  tls:
    secretName: netbox-cert-tls
    domains:
      - main: netbox.anshulg.com
